// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Star gets proper class name and structure for: index 1 / rating: 1 / big! 1`] = `
"<span className=\\"Star\\">
  <span className=\\"star-block_color-1 star-block_size-big\\">
    🟊
  </span>
</span>"
`;

exports[`Star gets proper class name and structure for: index 1 / rating: 1 1`] = `
"<span className=\\"Star\\">
  <span className=\\"star-block_color-1 star-block_size-small\\">
    🟊
  </span>
</span>"
`;

exports[`Star gets proper class name and structure for: index 1 / rating: 2 1`] = `
"<span className=\\"Star\\">
  <span className=\\"star-block_color-2 star-block_size-small\\">
    🟊
  </span>
</span>"
`;

exports[`Star gets proper class name and structure for: index 1 / rating: 3 1`] = `
"<span className=\\"Star\\">
  <span className=\\"star-block_color-3 star-block_size-small\\">
    🟊
  </span>
</span>"
`;

exports[`Star gets proper class name and structure for: index 1 / rating: 4 1`] = `
"<span className=\\"Star\\">
  <span className=\\"star-block_color-4 star-block_size-small\\">
    🟊
  </span>
</span>"
`;

exports[`Star gets proper class name and structure for: index 1 / rating: 5 1`] = `
"<span className=\\"Star\\">
  <span className=\\"star-block_color-5 star-block_size-small\\">
    🟊
  </span>
</span>"
`;

exports[`Star gets proper class name and structure for: index 2 / rating: 1 1`] = `
"<span className=\\"Star\\">
  <span className=\\"star-block_color-0 star-block_size-small\\">
    🟊
  </span>
</span>"
`;
